--- a/views/add_or_update_genre.jade
+++ b/views/add_or_update_genre.jade
@@ -1,4 +1,7 @@
 extends layout 
 
 block content 
-    h1 form for adding genre
+  form(action="/genres/add" method="post")
+    label(for="name") Name: 
+    input(type="text" name="name")
+    button Submit
