--- a/views/movie_list.jade
+++ b/views/movie_list.jade
@@ -1,9 +1,10 @@
 extends layout 
 
 block content
-    h2 List of movies:
-    ul 
-        li movie 1
-        li movie 2
-        li movie 3
-        li movie 4
+  h2 List of movies:
+    for movie in movies
+      a(href="/movies/" + movie._id) 
+        div 
+          h3=movie.title
+          h5=movie.releaseyear
+          p=movie.director
