--- a/views/director_details.jade
+++ b/views/director_details.jade
@@ -3,8 +3,9 @@ extends layout
 block content 
     h1=director.name
     p=director.birth_date_formatted
-    p=director.death_date_formatted 
+    p=director.death_date_formatted  
 
     ul 
       for movie in movies 
-        li=movie.title
+        a(href="/movies/" + movie._id)
+          li=movie.title
